@@ -37,6 +37,7 @@
                 #:select (pg-connection?
                           pg-connectdb
                           pg-finish
+                          pg-result-status
                           pg-exec pg-ntuples pg-nfields
                           pg-fname pg-getvalue))
   #:use-module ((database postgres-types)
@@ -274,6 +275,14 @@
                                 "dbname=~A")
                             db-spec)))
                      (else (error "bad db-spec:" db-spec))))
+         ;; TODO: zonk sql-quote; make sqlqq dynamic based on
+         ;;       runtime parameter `standard_conforming_strings'.
+         (sqlqq (if (eq? 'PGRES_TUPLES_OK
+                         (pg-result-status
+                          (pg-exec conn "SELECT E'OK';")))
+                    (lambda (s)
+                      (string-append "E" (sql-quote s)))
+                    sql-quote))
          (trace-exec #f)
          (qstring-colnames (map (lambda (name)
                                   (cons name (symbol->qstring name)))
@@ -322,7 +331,7 @@
                  (s (or (false-if-exception ((dbcoltype:stringifier def) x))
                         (dbcoltype:default def))))
             (or (string? s) (error "not a string:" s))
-            (sql-pre (sql-quote s)))))
+            (sql-pre (sqlqq s)))))
 
     (define (do-insert cols data)
       (xt (force insert/pre)
